Filrer enhancment, show lead details and paths
